tests/types/tillegalseqrecursion.nim
discard """
  errormsg: "illegal recursion in type 'CyclicSeq'"
"""

type
  CyclicSeq = seq[ref CyclicSeq]
